# guile-nacl

./: .gitignore  AUTHORS  HACKING  Makefile.am  NEWS  README  configure.ac  nacl.scm
doc/: Makefile.am
guile-nacl/: Makefile.am  guile-nacl.c  guile-nacl.h
nacl/: Makefile.am  config.scm.in
